project segregation, modularisation and cleanup